svg folders update + listing css

--- a/property-card-WIP-2.html
+++ b/property-card-WIP-2.html
@@ -458,10 +458,11 @@
                                 <div class="listing-info">
                                     <div class="row m-0">
                                         <div class="col bdg-name p-0">
-                                            <span>Luxury Building long text</span>
+                                            <span>Luxury Building Long Text</span>
                                         </div>
-                                        <div class="source col-auto">
-                                            VERIFIED OWNER</div>
+                                        <div class="source owner col-auto">
+                                            Verified Owner<object type="image/svg+xml" data="assets/svg/search_page/owner.svg">
+<img alt="fallback" src="assets/svg/search_page/owner.png" width="15" height="17"></object></div>
                                     </div>
                                     <div class="row m-0">
                                         <div class="hood col-12">
@@ -566,7 +567,7 @@
                             <!-- Listing Card -->
                             <div class="listing-card">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-a.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/listing-b.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
                                     <div class="row m-0">
