--- a/property-card-WIP-3.html
+++ b/property-card-WIP-3.html
@@ -442,19 +442,16 @@
     <!-- Content -->
     <div id="content">
         <!-- Card section -->
-        <div class="section">
+        <div class="section search">
             <div class="bg-light py-5">
-                <div class="container demo-search-panel">
-                    <!-- Social feed cards -->
-                    <h3 class="font-weight-400 my-4">
-                        Social feed cards
-                    </h3>
+                                                <div class="map-demo">
+                                </div>
+                <div class="demo-search-panel map">
                     <div class="row mb-4">
-                        <div class="col-md-6 col-lg-4 col-sm-6 col-12">
-                            <!-- Listing Card -->
+                            </div><!-- Listing Card --><div class="listing-layout">
                             <div class="listing-card verified">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-1.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/1b.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
                                     <div class="price">
@@ -462,11 +459,11 @@
                                             <span class="cur">HKD</span>$22K<span class="per">mth</span>
                                         </div>
                                     </div>
-                                    <div class="row m-0 justify-content-between">
-                                        <div class="bdg-name col-auto col-lg p-0">
+                                    <div class="row m-0 justify-content-between verified">
+                                        <div class="bdg-name col p-0">
                                             <span>Luxury Building Long Text</span>
                                         </div>
-                                        <div class="source owner col-auto">
+                                        <div class="source col-auto">
                                             Verified Owner<object type="image/svg+xml" data="assets/svg/search_page/owner.svg">
                                                 <img alt="fallback" src="assets/svg/search_page/owner.png" width="15" height="17"></object></div>
                                     </div>
@@ -493,17 +490,22 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Listing Card -->
+                            </div><!-- Listing Card --><div class="listing-layout">
                             <div class="listing-card featured verified">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-2.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/2.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
-                                    <div class="row m-0 justify-content-between">
-                                        <div class="bdg-name col-auto col-lg p-0">
+                                                                        <div class="price">
+                                        <div class="sale">
+                                            <span class="cur">HKD</span>$22M
+                                        </div>
+                                    </div>
+                                    <div class="row m-0 justify-content-between verified">
+                                        <div class="bdg-name col p-0">
                                             <span>Luxury Building Long Text</span>
                                         </div>
-                                        <div class="source owner col-auto">
+                                        <div class="source col-auto">
                                             Verified Owner<object type="image/svg+xml" data="assets/svg/search_page/owner.svg">
                                                 <img alt="fallback" src="assets/svg/search_page/owner.png" width="15" height="17"></object></div>
                                     </div>
@@ -530,17 +532,22 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Listing Card -->
+                            </div><!-- Listing Card --><div class="listing-layout">
                             <div class="listing-card">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-3.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/3.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
-                                    <div class="row m-0 justify-content-between">
-                                        <div class="bdg-name col-auto col-lg p-0">
+                                                                        <div class="price">
+                                        <div class="rent">
+                                            <span class="cur">HKD</span>$22K<span class="per">mth</span>
+                                        </div>
+                                    </div>
+                                    <div class="row m-0 justify-content-between verified">
+                                        <div class="bdg-name col p-0">
                                             <span>Luxury Building Long Text</span>
                                         </div>
-                                        <div class="source owner col-auto">
+                                        <div class="source col-auto">
                                             Verified Owner<object type="image/svg+xml" data="assets/svg/search_page/owner.svg">
                                                 <img alt="fallback" src="assets/svg/search_page/owner.png" width="15" height="17"></object></div>
                                     </div>
@@ -567,19 +574,23 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4 col-sm-6 col-12">
-                            <!-- Listing Card -->
+
+                            </div><!-- Listing Card --><div class="listing-layout">
                             <div class="listing-card recommended">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-b.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/4.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
-                                    <div class="row m-0 justify-content-between">
-                                        <div class="bdg-name col-auto col-lg p-0">
-                                            <span>Fortune Court</span>
+                                                                        <div class="price">
+                                        <div class="sale">
+                                            <span class="cur">HKD</span>$22M
                                         </div>
-                                        <div class="source agent col-auto">
+                                    </div>
+                                    <div class="row m-0 justify-content-between agent">
+                                        <div class="bdg-name col p-0">
+                                            <span>Fortune Court Building</span>
+                                        </div>
+                                        <div class="source col-auto">
                                             Agent<object type="image/svg+xml" data="assets/svg/search_page/agent.svg">
                                                 <img alt="fallback" src="assets/svg/search_page/agent.png" width="15" height="17"></object></div>
                                     </div>
@@ -606,17 +617,22 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Listing Card -->
+                            </div><!-- Listing Card --><div class="listing-layout">
                             <div class="listing-card">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-3.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/5.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
-                                    <div class="row m-0 justify-content-between">
-                                        <div class="bdg-name col-auto col-lg p-0">
+                                                                        <div class="price">
+                                        <div class="rent">
+                                            <span class="cur">HKD</span>$22K<span class="per">mth</span>
+                                        </div>
+                                    </div>
+                                    <div class="row m-0 justify-content-between verified">
+                                        <div class="bdg-name col p-0">
                                             <span>Luxury Building Long Text</span>
                                         </div>
-                                        <div class="source owner col-auto">
+                                        <div class="source col-auto">
                                             Verified Owner<object type="image/svg+xml" data="assets/svg/search_page/owner.svg">
                                                 <img alt="fallback" src="assets/svg/search_page/owner.png" width="15" height="17"></object></div>
                                     </div>
@@ -643,17 +659,22 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Listing Card -->
+                            </div><!-- Listing Card --><div class="listing-layout">
                             <div class="listing-card">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-2.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/1b.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
-                                    <div class="row m-0 justify-content-between">
-                                        <div class="bdg-name col-auto col-lg p-0">
+                                                                        <div class="price">
+                                        <div class="sale">
+                                            <span class="cur">HKD</span>$22M
+                                        </div>
+                                    </div>
+                                    <div class="row m-0 justify-content-between verified">
+                                        <div class="bdg-name col p-0">
                                             <span>Luxury Building Long Text</span>
                                         </div>
-                                        <div class="source owner col-auto">
+                                        <div class="source col-auto">
                                             Verified Owner<object type="image/svg+xml" data="assets/svg/search_page/owner.svg">
                                                 <img alt="fallback" src="assets/svg/search_page/owner.png" width="15" height="17"></object></div>
                                     </div>
@@ -680,12 +701,11 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4 col-sm-6 col-12">
-                            <!-- Listing Card -->
+
+                            </div><!-- Listing Card --><div class="listing-layout">
                             <div class="listing-card featured">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-2.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/2.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
                                     <div class="price">
@@ -693,11 +713,11 @@
                                             <span class="cur">HKD</span>$22M
                                         </div>
                                     </div>
-                                    <div class="row m-0 justify-content-between">
-                                        <div class="bdg-name col-auto col-lg p-0">
+                                    <div class="row m-0 justify-content-between owner">
+                                        <div class="bdg-name col p-0">
                                             <span>Richview Terrace</span>
                                         </div>
-                                        <div class="source owner col-auto">
+                                        <div class="source col-auto">
                                             Owner<object type="image/svg+xml" data="assets/svg/search_page/owner.svg">
                                                 <img alt="fallback" src="assets/svg/search_page/owner.png" width="15" height="17"></object></div>
                                     </div>
@@ -724,17 +744,22 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Listing Card -->
+                            </div><!-- Listing Card --><div class="listing-layout">
                             <div class="listing-card">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-1.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/3.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
-                                    <div class="row m-0 justify-content-between">
-                                        <div class="bdg-name col-auto col-lg p-0">
+                                                                        <div class="price">
+                                        <div class="rent">
+                                            <span class="cur">HKD</span>$22K<span class="per">mth</span>
+                                        </div>
+                                    </div>
+                                    <div class="row m-0 justify-content-between verified">
+                                        <div class="bdg-name col p-0">
                                             <span>Luxury Building Long Text</span>
                                         </div>
-                                        <div class="source owner col-auto">
+                                        <div class="source col-auto">
                                             Verified Owner<object type="image/svg+xml" data="assets/svg/search_page/owner.svg">
                                                 <img alt="fallback" src="assets/svg/search_page/owner.png" width="15" height="17"></object></div>
                                     </div>
@@ -761,17 +786,22 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Listing Card -->
+                            </div><!-- Listing Card --><div class="listing-layout">
                             <div class="listing-card">
                                 <a class="listing-img" href="#" target="_blank">
-                                    <img class="listing-img-top" src="demo/listings/listing-3.jpg" alt="Building Name">
+                                    <img class="listing-img-top" src="demo/listings/5.jpg" alt="Building Name">
                                 </a>
                                 <div class="listing-info">
-                                    <div class="row m-0 justify-content-between">
-                                        <div class="bdg-name col-auto col-lg p-0">
+                                                                        <div class="price">
+                                        <div class="rent">
+                                            <span class="cur">HKD</span>$22K<span class="per">mth</span>
+                                        </div>
+                                    </div>
+                                    <div class="row m-0 justify-content-between verified">
+                                        <div class="bdg-name col p-0">
                                             <span>Luxury Building Long Text</span>
                                         </div>
-                                        <div class="source owner col-auto">
+                                        <div class="source col-auto">
                                             Verified Owner<object type="image/svg+xml" data="assets/svg/search_page/owner.svg">
                                                 <img alt="fallback" src="assets/svg/search_page/owner.png" width="15" height="17"></object></div>
                                     </div>
@@ -798,7 +828,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
