--- a/property-card-WIP-4.html
+++ b/property-card-WIP-4.html
@@ -20,7 +20,6 @@
 </head>
 
 <body class="en">
-
     <div class="section search py-5">
         <div class="demo-search-panel map">
             <!-- Listing Card -->
@@ -49,7 +48,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span> <span class="ft">ft<span class="sq">²</span> net</span>
+                                        <span class="num">1,200</span> <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
                                 <div class="date">Listed 1 day</div>
@@ -87,7 +86,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span> <span class="ft">ft<span class="sq">²</span> net</span>
+                                        <span class="num">1,200</span> <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
                                 <div class="date">Listed 2 days</div>
@@ -124,7 +123,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span> <span class="ft">ft<span class="sq">²</span> net</span>
+                                        <span class="num">1,200</span> <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
                                 <div class="date">
@@ -164,7 +163,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span> <span class="ft">ft<span class="sq">²</span> net</span>
+                                        <span class="num">1,200</span> <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
                                 <div class="date">Listed 1 month+</div>
@@ -201,7 +200,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span> <span class="ft">ft<span class="sq">²</span> net</span>
+                                        <span class="num">1,200</span> <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
                                 <div class="date">Listed 15 days</div>
@@ -239,7 +238,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span> <span class="ft">ft<span class="sq">²</span> net</span>
+                                        <span class="num">1,200</span> <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
                                 <div class="date">Listed 13 days</div>
@@ -277,7 +276,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span> <span class="ft">ft<span class="sq">²</span> net</span>
+                                        <span class="num">1,200</span> <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
                                 <div class="date">Listed 2 days</div>
@@ -314,7 +313,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span> <span class="ft">ft<span class="sq">²</span> net</span>
+                                        <span class="num">1,200</span> <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
                                 <div class="date">Listed 1 month+</div>
@@ -351,7 +350,7 @@
                                     <div class="layout"><span class="bed">2</span><span class="bath">1</span>
                                     </div>
                                     <div class="size">
-                                        <span class="num">1,200</span> <span class="ft">ft<span class="sq">²</span> net</span>
+                                        <span class="num">1,200</span> <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
                                 <div class="date">Listed 18 days</div>
@@ -365,7 +364,6 @@
             </div>
         </div>
     </div>
-
     <!-- jQuery -->
     <script src="assets/js/vendor/jquery-3.3.1.min.js"></script>
     <!-- Bootstrap js -->
