font family and minimal bootstrap

--- a/homenet-design-styles-all.html
+++ b/homenet-design-styles-all.html
@@ -9,10 +9,12 @@
     <title>Homenet Design Styles</title>
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/homenet.css">
-    <!-- Google Fonts -->
+        <link rel="stylesheet" href="assets/css/demo.css">
+                <link rel="stylesheet" href="assets/css/footer.css">
+    <!-- English Google Fonts load for en only -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
     <!-- Chinese Google Font load for zh only -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700|Montserrat:300,400,500,600,700" rel="stylesheet">
 </head>
 
 <body class="en">
