--- a/property-card-WIP-4.html
+++ b/property-card-WIP-4.html
@@ -34,10 +34,8 @@
                             </div>
                         </div>
                         <div class="row m-0 justify-content-between owner">
-                            <div class="bdg-name col p-0">
-                                <a href="#" title="Wealthy Mansion">Wealthy Mansion</a>
-                            </div>
-                            <div class="source col-auto">verified</div>
+                            <h2 class="bdg-name col p-0"><a href="#" title="Wealthy Mansion">Wealthy Mansion</a></h2>
+                            <div class="source col-auto" title="Verified Owner">verified</div>
                         </div>
                         <div class="row m-0">
                             <div class="hood col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -72,10 +70,10 @@
                             </div>
                         </div>
                         <div class="row m-0 justify-content-between owner">
-                            <div class="bdg-name col p-0">
+                            <h2 class="bdg-name col p-0">
                                 <a href="#" title="Rich View Terrace">Rich View Terrace</a>
-                            </div>
-                            <div class="source col-auto">verified</div>
+                            </h2>
+                            <div class="source col-auto" title="Verified Owner">verified</div>
                         </div>
                         <div class="row m-0">
                             <div class="hood col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -101,7 +99,7 @@
             <div class="listing-layout">
                 <div class="listing-card">
                     <div class="save"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/3.jpg" alt="Building Name">
+                        <img class="listing-img-top" src="demo/listings/3.jpg" alt="Kwong Sang Hong Grand Building Lodge">
                     </a>
                     <div class="listing-info">
                         <div class="price">
@@ -109,9 +107,9 @@
                             </div>
                         </div>
                         <div class="row m-0 justify-content-between owner">
-                            <div class="bdg-name col p-0">
+                            <h2 class="bdg-name col p-0">
                                 <a href="#" title="Kwong Sang Hong Grand Building Lodge">Kwong Sang Hong Grand Building Lodge</a>
-                            </div>
+                            </h2>
                             <div class="source col-auto">owner</div>
                         </div>
                         <div class="row m-0">
@@ -149,9 +147,9 @@
                             </div>
                         </div>
                         <div class="row m-0 justify-content-between agent">
-                            <div class="bdg-name col p-0">
+                            <h2 class="bdg-name col p-0">
                                 <a href="#" title="Fortune Court Building">Fortune Court Building</a>
-                            </div>
+                            </h2>
                             <div class="source col-auto">agent</div>
                         </div>
                         <div class="row m-0">
@@ -186,9 +184,9 @@
                             </div>
                         </div>
                         <div class="row m-0 justify-content-between owner">
-                            <div class="bdg-name col p-0">
+                            <h2 class="bdg-name col p-0">
                                 <a href="#" title="Luxury Building">Luxury Building</a>
-                            </div>
+                            </h2>
                             <div class="source col-auto">owner</div>
                         </div>
                         <div class="row m-0">
@@ -224,10 +222,10 @@
                             </div>
                         </div>
                         <div class="row m-0 justify-content-between owner">
-                            <div class="bdg-name col p-0">
+                            <h2 class="bdg-name col p-0">
                                 <a href="#" title="Great George Building">Great George Building</a>
-                            </div>
-                            <div class="source col-auto">verified</div>
+                            </h2>
+                            <div class="source col-auto" title="Verified Owner">verified</div>
                         </div>
                         <div class="row m-0">
                             <div class="hood col-12">Tsim Sha Tsui . Kowloon</div>
@@ -262,9 +260,9 @@
                             </div>
                         </div>
                         <div class="row m-0 justify-content-between owner">
-                            <div class="bdg-name col p-0">
+                            <h2 class="bdg-name col p-0">
                                 <a href="#" title="Richview Terrace">Richview Terrace</a>
-                            </div>
+                            </h2>
                             <div class="source col-auto">owner</div>
                         </div>
                         <div class="row m-0">
@@ -299,9 +297,9 @@
                             </div>
                         </div>
                         <div class="row m-0 justify-content-between agent">
-                            <div class="bdg-name col p-0">
+                            <h2 class="bdg-name col p-0">
                                 <a href="#" title="21 Hoi Wan Street">21 Hoi Wan Street</a>
-                            </div>
+                            </h2>
                             <div class="source col-auto">agent</div>
                         </div>
                         <div class="row m-0">
@@ -336,9 +334,9 @@
                             </div>
                         </div>
                         <div class="row m-0 justify-content-between owner">
-                            <div class="bdg-name col p-0">
+                            <h2 class="bdg-name col p-0">
                                 <a href="#" title="Hing Bong Mansion">Hing Bong Mansion</a>
-                            </div>
+                            </h2>
                             <div class="source col-auto">owner</div>
                         </div>
                         <div class="row m-0">
