--- a/bootstrap4-addon-back.html
+++ b/bootstrap4-addon-back.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/card-concise-bs3.css">
       <link rel="stylesheet" href="assets/css/footer-final.css">
             <link rel="stylesheet" href="assets/css/navbar.css">
+                        <link rel="stylesheet" href="assets/css/backtop.css">
 
    
 
@@ -790,9 +791,11 @@
             </div>
         </div>
     </div>
+    <div style="min-height: 1000px"></div>
     <!-- Return to Top -->
-    <a href="javascript:" id="return-to-top"><img src="assets/svg/caret-up-white.svg" alt="Return to top"></a>
+<a href="#" class="pg-top text-replace js-pg-top"></a>
     <!-- [4] Footer -->
+
     <footer>
         <div class="bs4 container-fluid footer-inner">
             <div class="footer-top">
@@ -924,55 +927,104 @@
 
 
 
-
     
 
-    <!-- jQuery -->
-    <script src="assets/js/vendor/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- homenet navigation js -->
-    <script src="assets/js/homenet.menu.js"></script>
-    <!-- homenet return top js -->
-    <script src="assets/js/return.top.js"></script>
-    <script>
-    // Modal settings
-    $('#exampleModal').on('show.bs.modal', function(event) {
-        var button = $(event.relatedTarget) // Button that triggered the modal
-        var recipient = button.data('whatever') // Extract info from data-* attributes
-        // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-        // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-        var modal = $(this)
-        modal.find('.modal-title').text('New message to ' + recipient)
-        modal.find('.modal-body input').val(recipient)
-    })
+<script>
+document.getElementsByTagName("html")[0].className += " js";
 
-    // Popover and Tooltip settings
-    $(function() {
+// Utility function
+function Util () {};
 
-        $('.popover-btn').popover()
+/* 
+class manipulation functions
+*/
 
-        $('.popover-btn-dark').popover({
-            template: '<div class="popover popover-dark" role="tooltip"><div class="arrow bs4"></div><h3 class="popover-header"></h3><div class="popover-body"></div></div>'
-        })
+Util.addClass = function(el, className) {
+    var classList = className.split(' ');
+    if (el.classList) el.classList.add(classList[0]);
+    else if (!Util.hasClass(el, classList[0])) el.className += " " + classList[0];
+    if (classList.length > 1) Util.addClass(el, classList.slice(1).join(' '));
+};
 
-        $('.toast').toast('show')
+Util.removeClass = function(el, className) {
+    var classList = className.split(' ');
+    if (el.classList) el.classList.remove(classList[0]);    
+    else if(Util.hasClass(el, classList[0])) {
+        var reg = new RegExp('(\\s|^)' + classList[0] + '(\\s|$)');
+        el.className=el.className.replace(reg, ' ');
+    }
+    if (classList.length > 1) Util.removeClass(el, classList.slice(1).join(' '));
+};
 
-        $('.tooltip-btn').tooltip()
+/* 
+Smooth Scroll
+*/
 
-        $('.tooltip-btn-light').tooltip({
-            template: '<div class="tooltip tooltip-light" role="tooltip"><div class="arrow bs4"></div><div class="tooltip-inner"></div></div>'
-        })
+Util.scrollTo = function(final, duration, cb) {
+  var start = window.scrollY || document.documentElement.scrollTop,
+      currentTime = null;
+      
+  var animateScroll = function(timestamp){
+    if (!currentTime) currentTime = timestamp;        
+    var progress = timestamp - currentTime;
+    if(progress > duration) progress = duration;
+    var val = Math.easeInOutQuad(progress, start, final-start, duration);
+    window.scrollTo(0, val);
+    if(progress < duration) {
+        window.requestAnimationFrame(animateScroll);
+    } else {
+      cb && cb();
+    }
+  };
 
-    })
+  window.requestAnimationFrame(animateScroll);
+};
+
+/* 
+Animation curves
+*/
+Math.easeInOutQuad = function (t, b, c, d) {
+    t /= d/2;
+    if (t < 1) return c/2*t*t + b;
+    t--;
+    return -c/2 * (t*(t-2) - 1) + b;
+};  
+
+(function(){
+
+// Back to Top 
+    var backTop = document.getElementsByClassName('js-pg-top')[0],
+        offset = 300, // browser window scroll (in pixels) after which the "back to top" link is shown
+        offsetOpacity = 1200, //browser window scroll (in pixels) after which the "back to top" link opacity is reduced
+        scrollDuration = 700,
+        scrolling = false;
+
+    if( backTop ) {
+//update back to top visibility on scrolling
+        window.addEventListener("scroll", function(event) {
+            if( !scrolling ) {
+                scrolling = true;
+                (!window.requestAnimationFrame) ? setTimeout(checkBackToTop, 250) : window.requestAnimationFrame(checkBackToTop);
+            }
+        });
+
+//smooth scroll to top
+        backTop.addEventListener('click', function(event) {
+            event.preventDefault();
+            (!window.requestAnimationFrame) ? window.scrollTo(0, 0) : Util.scrollTo(0, scrollDuration);
+        });
+    }
+
+    function checkBackToTop() {
+        var windowTop = window.scrollY || document.documentElement.scrollTop;
+        ( windowTop > offset ) ? Util.addClass(backTop, 'pg-top--is-visible') : Util.removeClass(backTop, 'pg-top--is-visible pg-top--fade-out');
+        ( windowTop > offsetOpacity ) && Util.addClass(backTop, 'pg-top--fade-out');
+        scrolling = false;
+    }
+})();
     </script>
-    <!-- Drop down selector-->
-    <script>
-    $(".dropdown-menu a").click(function() {
-        var selText = $(this).text();
-        $(this).parents('.color-picker').find('.dropdown-toggle').html(selText);
-    });
-    </script>
+
+
 </body>
 
 </html>
