--- a/navbar-footer-listingcards.html
+++ b/navbar-footer-listingcards.html
@@ -10,12 +10,14 @@
     <!-- Existing Rentall CSS -->
     <link rel="stylesheet" href="assets/css/rentall-bootstrap.css">
     <link rel="stylesheet" href="assets/css/rentall-common.css">
-    <!-- Homenet CSS -->
+    <!-- Homenet CSS Common -->
     <link rel="stylesheet" href="assets/css/bootstrap4-add-on.css">
+    <!-- Homenet CSS Components-->
     <link rel="stylesheet" href="assets/css/listing-cards.css">
+    <link rel="stylesheet" href="assets/css/backtop.css">
     <link rel="stylesheet" href="assets/css/homenet-footer.css">
     <link rel="stylesheet" href="assets/css/homenet-navbar.css">
-    <link rel="stylesheet" href="assets/css/backtop.css">
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
     <!-- Chinese Google Font load for zh only -->
