--- a/homenet-design-styles-all.html
+++ b/homenet-design-styles-all.html
@@ -673,12 +673,14 @@
             </div>
         </div>
         <div class="divider-3 mb-5"></div>
-
         <!-- Map Listing Card -->
         <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
             Search Page Map Listing Card
+        </div>
 
-SEE <a href="https://wilzilla.github.io/homenet.github.io/navbar-footer-listingcards.html">Property Cards</a>
+<a href="https://wilzilla.github.io/homenet.github.io/navbar-footer-listingcards.html">Property Cards</a>
+
+        <div class="divider-3 mb-5"></div>
         <!-- Profile Pages - Owner -->
         <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
             Profile Pages - Owner
