--- a/homenet-design-styles-all.html
+++ b/homenet-design-styles-all.html
@@ -629,37 +629,12 @@
                         <span>123</span>
                         <h1>Mid-Levels Central Property for Rent</h1>
                     </div>
-                    <div class="listing-card">
-                        <span class="building_name">Luxury Building</span>
-                        <span class="neighbourhood">Mid-Levels Central . HK Island</span>
-                        <span class="neighbourhood">Star St Precinct . Wanchai . HK Island</span>
-                        <span class="neighbourhood">Chung Hom Kok . HK Island South</span>
-                        <span class="neighbourhood">Lamma Island . Outlying Islands</span> <span class="neighbourhood">Ho Chung New Village . NT</span>
-                        <span class="neighbourhood">Cheung Sha Wan . Kowloon</span>
-                        <span class="source">VERIFIED OWNER</span>
-                        <span class="source">OWNER</span>
-                        <span class="source">SOLE AGENT</span>
-                        <span class="source">AGENT</span>
-                        <div class="price">
-                            <div class="sale">
-                                <span class="cur">HKD</span>$22M
-                            </div>
-                            <div class="rent">
-                                <span class="cur">HKD</span>$22K<span class="per">mth</span>
-                            </div>
-                        </div>
-                        <div class="details">
-                            <div class="layout">
-                                2 1
-                            </div>
-                            <div class="size">
-                                <span class="number">1,200</span> <span class="feet">ft<span class="square">²</span> net</span>
-                            </div>
-                        </div>
-                        <div class="date">
-                            Listed for 1 day
-                        </div>
-                    </div>
+
+
+<a href="https://wilzilla.github.io/homenet.github.io/navbar-footer-listingcards.html">Property Cards</a>
+
+<br>
+
                     <div class="mb-5 flex-wrap d-flex">
                         <button class="homenet-btn search-btn more-filters">More Filters</button>
                     </div>
@@ -677,11 +652,40 @@
         <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
             Search Page Map Listing Card
         </div>
-
-<a href="https://wilzilla.github.io/homenet.github.io/navbar-footer-listingcards.html">Property Cards</a>
-
-<br>
-
+        <div class="section">
+            <div class="container">
+                <div class="map-listing-card mb-5">
+                    <span class="building_name">Luxury Building</span>
+                    <span class="neighbourhood">Mid-Levels Central . HK Island</span>
+                    <span class="neighbourhood">Star St Precinct . Wanchai . HK Island</span>
+                    <span class="neighbourhood">Chung Hom Kok . HK Island South</span>
+                    <span class="neighbourhood">Lamma Island . Outlying Islands</span>
+                    <span class="neighbourhood">Ho Chung New Village . NT</span>
+                    <span class="neighbourhood">Cheung Sha Wan . Kowloon</span>
+                    <span class="source">VERIFIED OWNER</span> <span class="source">OWNER</span> <span class="source">SOLE AGENT</span>
+                    <span class="source">AGENT</span>
+                    <div class="price">
+                        <div class="sale">
+                            <span class="cur">HKD</span>$22M
+                        </div>
+                        <div class="rent">
+                            <span class="cur">HKD</span>$22K<span class="per">mth</span>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <div class="layout">
+                            2 1
+                        </div>
+                        <div class="size">
+                            <span class="number">1,200</span> <span class="feet">ft<span class="square">²</span> net</span>
+                        </div>
+                    </div>
+                    <div class="date">
+                        Listed for 1 day
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="divider-3 mb-5"></div>
         <!-- Profile Pages - Owner -->
         <div class="section-title-1 font-weight-800 text-uppercase" style="font-size: 40px; color: #5c7073;">
