update listing cards

--- a/homenet-design-styles-all.html
+++ b/homenet-design-styles-all.html
@@ -631,7 +631,7 @@
                     </div>
 
 
-<a href="https://wilzilla.github.io/homenet.github.io/navbar-footer-listingcards.html">Property Cards</a>
+<a href="https://wilzilla.github.io/homenet.github.io/navbar-footer-listingcards.html">SEE FULL UP TO DATE Property Cards HERE</a>
 
 <br>
 
