--- a/listing-banner-updated.html
+++ b/listing-banner-updated.html
@@ -42,6 +42,7 @@
         object-fit: cover;
         width: 100%;
         height: 100%;
+        object-position: 50% 50%;
     }
     .img-frame {
         height: 100%;
@@ -52,6 +53,7 @@
         object-fit: cover;
         width: 100%;
         height: 100%;
+        object-position: 50% 50%;
     }
     .main-img {
         -webkit-box-flex: 0;
@@ -62,37 +64,38 @@
 
 
     /* Responsive widths */
-
     @media (max-width: 500px) {
         .main-img {
             -webkit-box-flex: 0;
-            -ms-flex: 0 0 100%;
-            flex: 0 0 120%;
-            max-width: 120%;
+            -ms-flex: 0 0 101%;
+            flex: 0 0 101%;
+            max-width: 101%;
+        }
+        .img-frame {
+            max-height: 38vh;
         }
         .b-two, .b-three, .b-four, .b-five {
           display: none;
         }
     }
 
-    @media (min-width: 500px) {
+    @media (min-width: 501px) {
         .img-frame {
-            max-height: 500px;
+            max-height: 550px;
         }
     }
-
     @media (min-width: 768px) {
         .main-img {
             -webkit-box-flex: 0;
-            -ms-flex: 0 0 80%;
-            flex: 0 0 80%;
-            max-width: 80%;
+            -ms-flex: 0 0 85%;
+            flex: 0 0 85%;
+            max-width: 85%;
         }
         .side-img {
             -webkit-box-flex: 0;
-            -ms-flex: 0 0 80%;
-            flex: 0 0 80%;
-            max-width: 80%;
+            -ms-flex: 0 0 85%;
+            flex: 0 0 85%;
+            max-width: 85%;
         }
     }
 
@@ -135,16 +138,16 @@
             height: 100%;
         }
     }
-
-    /* Desktop 1080p and more */
+   
+    /* Desktop 1080p and larger */
     @media (min-width: 1930px) {
         .listing-banner-container {
             width: 100%;
-            max-height: 688px;
+            max-height: 60vh;
             overflow: hidden;
         }
         .img-frame {
-            height: 688px;
+            height: 60vh;
             max-height: inherit;
         }
         .main-img {
@@ -159,26 +162,59 @@
             -ms-flex: 0 0 516px;
             flex: 0 0 516px;
             max-width: 516px;
-            max-height: 688px
+            max-height: 60vh;
         }
         .main-img img {
             min-width: 516px;
-            object-fit: initial;
-            width: auto;
-            height: auto;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    /* Desktop 1440p and larger  */
+    @media (min-width: 2570px) {
+        .listing-banner-container {
+            width: 100%;
+            max-height: 65vh;
+            overflow: hidden;
+        }
+        .img-frame {
+            height: 65vh;
+            max-height: inherit;
+        }
+        .main-img {
+            -webkit-box-flex: 0;
+            -ms-flex: 0 0 44%;
+            flex: 0 0 44%;
+            width: 44%;
+            max-width: none;
+        }
+        .side-img {
+            -webkit-box-flex: 0;
+            -ms-flex: 0 0 16%;
+            flex: 0 0 16%;
+            max-width: 16%;
+            max-height: 65vh;
+        }
+        .main-img img {
+            min-width: 516px;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
         }
     }
 
     /* Mobile Devices */
     @media only screen and (max-device-width: 500px) and (-webkit-min-device-pixel-ratio: 2) {
         .main-img {
-            -webkit-box-flex: 1;
-            -ms-flex: 0 0 100%;
-            flex: 0 0 120%;
-            max-width: 120%;
+            -webkit-box-flex: 0;
+            -ms-flex: 0 0 101%;
+            flex: 0 0 101%;
+            max-width: 101%;
         }
         .img-frame {
-            max-height: 1000px;
+            max-height: 38vh;
         }
         .b-two, .b-three, .b-four, .b-five {
           display: none;
