--- a/OLD BACKUP/info-page-calc.html
+++ b/OLD BACKUP/info-page-calc.html
@@ -515,8 +515,8 @@
                                             <div class="calc-price">Purchase Price $</div><input id="price" type="text" />
                                         </div>
                                         <div class="bs4 col-12 calc-other-col p-0">
-                                            <div class="bs4 row no-gutters">
-                                                <div class="bs4 col info-col perm p-0">
+                                            <div class="bs4 row no-gutters perm">
+                                                <div class="bs4 col info-col p-0">
                                                     Buyer is a HK Permanent Resident
                                                 </div>
                                                 <div class="bs4 col-auto radio-col p-0">
