--- a/navbar-footer-listingcards.html
+++ b/navbar-footer-listingcards.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="assets/css/backtop.css">
     <link rel="stylesheet" href="assets/css/homenet-footer.css">
     <link rel="stylesheet" href="assets/css/homenet-navbar.css">
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
     <!-- Chinese Google Font load for zh only -->
@@ -448,9 +447,12 @@
             <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card verified">
-                    <div class="save"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/1b.jpg" alt="Wealthy Mansion">
-                    </a>
+                    <div class="save"></div>
+                    <div class="aspect-ratio">
+                        <a class="listing-img" href="#" target="_blank" title="Wealthy Mansion">
+                            <img class="listing-img-top" src="demo/listings/1.jpg" alt="Wealthy Mansion">
+                        </a>
+                    </div>
                     <div class="listing-info">
                         <div class="price">
                             <div class="rent">$22K<span class="per">/ mth</span>
@@ -484,9 +486,12 @@
             </div><!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card featured verified">
-                    <div class="saved"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/2.jpg" alt="Rich View Terrace">
-                    </a>
+                    <div class="saved"></div>
+                    <div class="aspect-ratio">
+                        <a class="listing-img" href="#" target="_blank" title="Rich View Terrace">
+                            <img class="listing-img-top" src="demo/listings/2c.jpg" alt="Rich View Terrace">
+                        </a>
+                    </div>
                     <div class="listing-info">
                         <div class="price">
                             <div class="sale">
@@ -523,9 +528,12 @@
             </div><!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
-                    <div class="save"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/3.jpg" alt="Kwong Sang Hong Grand Building Lodge">
-                    </a>
+                    <div class="save"></div>
+                    <div class="aspect-ratio">
+                        <a class="listing-img" href="#" target="_blank" title="Kwong Sang Hong Grand Building Lodge">
+                            <img class="listing-img-top" src="demo/listings/3.jpg" alt="Kwong Sang Hong Grand Building Lodge">
+                        </a>
+                    </div>
                     <div class="listing-info">
                         <div class="price">
                             <div class="rent">$15K<span class="per">/ mth</span>
@@ -563,9 +571,12 @@
             </div><!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card recommended">
-                    <div class="save"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/4.jpg" alt="Fortune Court Building">
-                    </a>
+                    <div class="save"></div>
+                    <div class="aspect-ratio">
+                        <a class="listing-img" href="#" target="_blank" title="Fortune Court Building">
+                            <img class="listing-img-top" src="demo/listings/4.jpg" alt="Fortune Court Building">
+                        </a>
+                    </div>
                     <div class="listing-info">
                         <div class="price">
                             <div class="sale">
@@ -602,9 +613,12 @@
             </div><!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
-                    <div class="save"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/5.jpg" alt="Luxury Building">
-                    </a>
+                    <div class="save"></div>
+                    <div class="aspect-ratio">
+                        <a class="listing-img" href="#" target="_blank" title="Luxury Building">
+                            <img class="listing-img-top" src="demo/listings/5.jpg" alt="Luxury Building">
+                        </a>
+                    </div>
                     <div class="listing-info">
                         <div class="price">
                             <div class="rent">$8K<span class="per">/ mth</span>
@@ -640,9 +654,12 @@
             </div><!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card verified">
-                    <div class="save"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/1b.jpg" alt="Great George Building">
-                    </a>
+                    <div class="save"></div>
+                    <div class="aspect-ratio">
+                        <a class="listing-img" href="#" target="_blank" title="Great George Building">
+                            <img class="listing-img-top" src="demo/listings/1.jpg" alt="Great George Building">
+                        </a>
+                    </div>
                     <div class="listing-info">
                         <div class="price">
                             <div class="sale">
@@ -679,9 +696,12 @@
             </div><!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card featured">
-                    <div class="save"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/2.jpg" alt="Richview Terrace">
-                    </a>
+                    <div class="save"></div>
+                    <div class="aspect-ratio">
+                        <a class="listing-img" href="#" target="_blank" title="Richview Terrace">
+                            <img class="listing-img-top" src="demo/listings/2.jpg" alt="Richview Terrace">
+                        </a>
+                    </div>
                     <div class="listing-info">
                         <div class="price">
                             <div class="sale">
@@ -718,9 +738,12 @@
             </div><!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
-                    <div class="save"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/3.jpg" alt="21 Hoi Wan Street">
-                    </a>
+                    <div class="save"></div>
+                    <div class="aspect-ratio">
+                        <a class="listing-img" href="#" target="_blank" title="21 Hoi Wan Street">
+                            <img class="listing-img-top" src="demo/listings/3.jpg" alt="21 Hoi Wan Street">
+                        </a>
+                    </div>
                     <div class="listing-info">
                         <div class="price">
                             <div class="rent">$162K<span class="per">/ mth</span>
@@ -753,12 +776,15 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div><!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
-                    <div class="save"></div><a class="listing-img" href="#" target="_blank">
-                        <img class="listing-img-top" src="demo/listings/5.jpg" alt="Hing Bong Mansion">
-                    </a>
+                    <div class="save"></div>
+                    <div class="aspect-ratio">
+                        <a class="listing-img" href="#" target="_blank" title="Hing Bong Mansion">
+                            <img class="listing-img-top" src="demo/listings/5.jpg" alt="Hing Bong Mansion">
+                        </a>
+                    </div>
                     <div class="listing-info">
                         <div class="price">
                             <div class="rent">$22.25K<span class="per">/ mth</span>
