--- a/listing-cards.html
+++ b/listing-cards.html
@@ -166,7 +166,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Fortune Court Building">Fortune Court Building</a>
                             </h2>
-                            <div class="source">agent</div>
+                            <div class="source">sole agent</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
