--- a/listing-cards.html
+++ b/listing-cards.html
@@ -62,7 +62,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card featured verified">
                     <div class="saved"></div>
@@ -104,7 +105,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
                     <div class="save"></div>
@@ -122,7 +124,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Kwong Sang Hong Grand Building Lodge">Kwong Sang Hong Grand Building Lodge</a>
                             </h2>
-                            <div class="source">owner</div>
+                            <div class="source" title="Owner">owner</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Wanchai . HK Island</div>
@@ -147,9 +149,10 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
-                <div class="listing-card recommended">
+                <div class="listing-card sole">
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Fortune Court Building">
@@ -166,7 +169,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Fortune Court Building">Fortune Court Building</a>
                             </h2>
-                            <div class="source">sole agent</div>
+                            <div class="source" title="Sole Agent">sole agent</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -189,7 +192,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
                     <div class="save"></div>
@@ -207,7 +211,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Luxury Building">Luxury Building</a>
                             </h2>
-                            <div class="source">owner</div>
+                            <div class="source" title="Owner">owner</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Mid Levels Central . HK Island</div>
@@ -230,7 +234,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card verified">
                     <div class="save"></div>
@@ -272,7 +277,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card featured">
                     <div class="save"></div>
@@ -291,7 +297,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Richview Terrace">Richview Terrace</a>
                             </h2>
-                            <div class="source">owner</div>
+                            <div class="source" title="Owner">owner</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -314,9 +320,10 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
-                <div class="listing-card">
+                <div class="listing-card recommended">
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="21 Hoi Wan Street">
@@ -332,7 +339,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="21 Hoi Wan Street">21 Hoi Wan Street</a>
                             </h2>
-                            <div class="source">agent</div>
+                            <div class="source" title="Agent">agent</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -355,7 +362,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
                     <div class="save"></div>
@@ -373,7 +381,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Hing Bong Mansion">Hing Bong Mansion</a>
                             </h2>
-                            <div class="source">owner</div>
+                            <div class="source" title="Owner">owner</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
