--- a/homepage/index.html
+++ b/homepage/index.html
@@ -31,6 +31,7 @@
                     </h2>
                     <h3>
                         <span>ALL Owner listings <strong>Commission Free</strong></span>
+                        <div class="clear"></div>
                         <span>All <strong>Owners list for free</strong></span>
                     </h3>
                 </div>
