--- a/info-page-mortgage2.html
+++ b/info-page-mortgage2.html
@@ -566,11 +566,11 @@
                                         Assumptions: Interest is applied to each calendar month, difference between the "assumed" and "current" interest rate is adjusted at a constant rate of increase or decrease at the end of each calendar year.
                                     </div>
                                 </div>
-                                <div class="calc-table noshow">
-                                    <div id="chart_div"></div>
+                                <div class="calc-table graph noshow">
+                                    <div id="chart_div" class="chart"></div>
                                 </div>
                                 <div class="calc-table noshow">
-                                    <div id="chart_table"></div>
+                                    <div id="morttable"></div>
                                 </div>
                                 <div class="footnote">
                                     <b>Information and disclaimer:</b>
